--- a/JavaScript/Objects/object.html
+++ b/JavaScript/Objects/object.html
@@ -13,7 +13,7 @@
         name:'Ahmad',
         rollno: 245,
         city:'Faisalabad',
-        address:'house no pata nhe d type colony fsd'
+        address:'House No Pata Nhe D Type Colony Fsd'
     }
     
     console.log("My name is "+ data.name+ " And Roll No is "+ data.rollno +" And city is "+data.city);
